# ruoyi

./: .gitignore  CMakeLists.txt  DEPLOY.md  DEPLOY_EN.md  LICENSE  README.md  README_EN.md  config.json  config.jsonl
git/: AppIncludes.h  main.cc
git/ai/controllers/: AiCtrl.h
git/common/: AjaxResult.h  Constants.h  CronUtils.h  CsvUtils.h  DataScopeUtils.h  DatabaseInit.cc  DatabaseInit.h  DeviceBinding.h  JsonLogger.h  JwtUtils.h  LoginUser.h  OperLogUtils.h  SecurityUtils.h  SslManager.h  StringUtils.h  TokenCache.h  UaUtils.h  VaultClient.h  XssUtils.h
git/common/controllers/: CommonCtrl.h
git/filters/: JwtAuthFilter.h  PermFilter.h
git/models/: SysModels.h
git/monitor/controllers/: CacheCtrl.h  DruidCtrl.h  ServerCtrl.h  SysJobCtrl.h  SysOnlineCtrl.h
git/services/: DatabaseService.h  KoboldCppManager.h  KoboldCppService.h  NginxManager.cc  VaultManager.cc  VaultManager.h  WhisperService.h
git/system/controllers/: SysConfigCtrl.h  SysDictCtrl.h  SysEmailConfigCtrl.h  SysPostCtrl.h  SysSslConfigCtrl.h  SysUserCtrl.h
git/system/services/: SysConfigService.h  SysMenuService.h  SysPasswordService.h
git/tool/controllers/: BuildCtrl.h  GenCtrl.h  VideoCtrl.h
src/: AppIncludes.h  config.json  iconfont_b64.h  main.cc
src/ai/: AiChatCtrl.h
src/ai/controllers/: AiCtrl.cc
src/common/: AjaxResult.h  ConfigLoader.h  Constants.h  CrashHandler.h  CsvUtils.h  DataMaskUtils.h  DataScopeUtils.h  DatabaseInit.cc  DatabaseInit.h  FrontendHost.h  HardwareId.h  HotConfig.h  IpUtils.h  JwtUtils.h  LdapAuth.h  LoginUser.h  MetricsCollector.h  OAuth2Manager.h  OperLogUtils.h  PageUtils.h  RateLimiter.h  RequestTracing.h  SecurityUtils.cc  SecurityUtils.h  SignUtils.h  SmtpUtils.h  StringUtils.h  TokenCache.h  TotpUtils.h  UaUtils.h  VramCache.h
src/common/controllers/: CommonCtrl.h  DashboardCtrl.h
src/filters/: JwtAuthFilter.h  PermFilter.h
src/models/: SysModels.h
src/monitor/: JobScheduler.h
src/monitor/controllers/: CacheCtrl.h  ServerCtrl.h  SysIpCtrl.h  SysJobCtrl.h  SysLogCtrl.h  SysLogFileCtrl.h  SysOnlineCtrl.h  WsNotifyCtrl.h
src/services/: DatabaseService.h  DdnsGoManager.cc  DdnsGoManager.h  KoboldCppManager.cc  KoboldCppService.cc  NginxManager.h  StorageService.h  WhisperService.cc
src/system/controllers/: OAuth2Ctrl.h  SysConfigCtrl.h  SysDeptCtrl.h  SysDictCtrl.h  SysLoginCtrl.h  SysMenuCtrl.h  SysNoticeCtrl.h  SysPostCtrl.h  SysRoleCtrl.h  SysTotpCtrl.h  SysUserCtrl.h
src/system/services/: SysConfigService.h  SysDictService.h  SysLoginService.h  SysMenuService.h  SysPasswordService.h  TokenService.h
src/tool/controllers/: GenCtrl.h  SwaggerCtrl.h  WebsiteInfoCtrl.h
vue-c++/: vue.config.js
vue-c++/src/: App.vue  permission.js
vue-c++/src/api/: dashboard.js  login.js
vue-c++/src/api/tool/: websiteInfo.js
vue-c++/src/router/: index.js
vue-c++/src/store/modules/: permission.js  user.js
vue-c++/src/utils/: auth.js  request.js
vue-c++/src/views/: forgotPassword.vue  index.vue  login.vue  register.vue
vue-c++/src/views/system/: emailConfig.vue  monitorConfig.vue
vue-c++/src/views/system/user/: authRole.vue
vue-c++/src/views/tool/websiteInfo/: index.vue
vue-c++/src/views/video/: index.vue
